# fund-alg-4sem

./: README.md
Lab1/Task-1/: CMakeLists.txt  Makefile
Lab1/Task-1/include/my_container/: array.hpp  container.hpp
Lab1/Task-1/tests/: test_array.cpp
Lab1/Task-2/: CMakeLists.txt  Makefile
Lab1/Task-2/include/my_container/: container.hpp  list.hpp
Lab1/Task-2/tests/: test_list.cpp
Lab1/Task-3/: CMakeLists.txt  Makefile
Lab1/Task-3/include/my_container/: deque.hpp  list.hpp
Lab1/Task-3/tests/: test_deque.cpp
Lab1/Task-4/: CMakeLists.txt  Makefile
Lab1/Task-4/include/my_container/: deque.hpp  stack.hpp
Lab1/Task-4/tests/: test_stack.cpp
Lab1/Task-5/: CMakeLists.txt  Makefile
Lab1/Task-5/include/my_container/: vector.hpp
Lab1/Task-5/tests/: test_vector.cpp
Lab1/Task-6/: CMakeLists.txt  Makefile
Lab1/Task-6/include/my_container/: my_unique_ptr.hpp
Lab1/Task-6/tests/: test_unique_ptr.cpp
Lab2/BigInt/: CMakeLists.txt  Makefile
Lab2/BigInt/include/: bigint.hpp
Lab2/BigInt/src/: bigint.cpp
Lab2/BigInt/tests/: test_bigint.cpp
Lab2/FastPow/: CMakeLists.txt
Lab2/FastPow/include/: mod_exp.hpp
Lab2/FastPow/src/: bigint.cpp  mod_exp.cpp
Lab2/FastPow/tests/: test_mod_exp.cpp
Lab2/Karatsuba/include/: bigint.hpp
Lab2/Karatsuba/src/: bigint.cpp
Lab2/Karatsuba/tests/: test_karatsuba.cpp
